# can-imu-fw

./: Cargo.toml  README.md  build.rs  canimu.dbc  rust-toolchain.toml  zencan_config.toml
.cargo/: config.toml
calibrations/: calibration_2.toml
canimu/: Cargo.toml  flash.sh  memory.x  openocd.cfg  zencan_config.toml
canimu/.cargo/: config.toml
canimu/src/: can.rs  cm7_imu.rs  icm_imu.rs  main.rs  n2k_frames.rs  serial.rs  state.rs  usb.rs
src/: can.rs  flash.rs  main.rs  state.rs
usb-serial-bridge/: Cargo.toml  README.md
usb-serial-bridge/.cargo/: config.toml
usb-serial-bridge/src/: main.rs
utils/: sample.py
webusb-client/: README.md  app.js  index.html  styles.css
