[package]
name = "canimu-fw"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
fdcan = { version = "0.2.1", features = ["fdcan_g0_g4_l5"] }
hash32 = "1.0.0"
icm20948-rs = { path = "../../icm-20948-rs", version = "0.1.1", features = ["defmt"] }
lilos = { version = "1.3.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
stm32-hal2 = { version = "2.1.8", features = ["g431", "g4rt", "embedded_hal"] }
stm32-metapac = {version = "18.0.0", features = ["stm32g431cb"] }
zencan-node = { version = "0.0.2", default-features = false, features = ["defmt"]}
rjmp-stm32-spi = { path = "../../rjmp-stm32-spi", features = ["defmt"] }

[build-dependencies]
zencan-build = { version = "0.0.2" }

[profile.dev]
codegen-units = 1       # better optimizations
debug = true
lto = true              # better optimizations
opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
overflow-checks = true
